--- a/styles/main.css
+++ b/styles/main.css
@@ -1,44 +1,3 @@
-/*# Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-- Blue: hsl(246, 80%, 60%)
-
-- Light red (work): hsl(15, 100%, 70%)
-- Soft blue (play): hsl(195, 74%, 62%)
-- Light red (study): hsl(348, 100%, 68%)
-- Lime green (exercise): hsl(145, 58%, 55%)
-- Violet (social): hsl(264, 64%, 52%)
-- Soft orange (self care): hsl(43, 84%, 65%)
-
-### Neutral
-
-- Very dark blue: hsl(226, 43%, 10%)
-- Dark blue: hsl(235, 46%, 20%)
-- Desaturated blue: hsl(235, 45%, 61%)
-- Pale Blue: hsl(236, 100%, 87%)
-
-## Typography
-
-### Body Copy
-
-- Font size: 18px (card titles e.g. Work, Play)
-
-### Font
-
-- Family: [Rubik](https://fonts.google.com/specimen/Rubik)
-- Weights: 300, 400, 500
-*/
-
 :root {
     --jeremy-div: hsl(246, 80%, 60%);
     --hrs-blue: hsl(235, 46%, 20%);
@@ -194,6 +153,10 @@ body{
     margin-top: 10px;
 }
 
+/* FOOTER */
+.footer{
+    bottom: 0;
+}
 
 /*****************************MEDIA QUERIES*************************/
  @media all and (min-width: 1024px){
@@ -218,9 +181,6 @@ body{
     .info-div{
         width: 250px;
         height: 417px;
-        /* margin-right: 20px; */
-        /* grid-row-start: 1;
-        grid-row-end: 3; */
     }
 
     .jeremy-div{
@@ -248,18 +208,6 @@ body{
         cursor: pointer;
         margin-bottom: 20px;
     }
-
-    /* .work{
-        grid-column-start: 2;
-    }
-    
-    .play{
-        grid-column-start: 3;
-    } 
-    .study{
-        grid-column-start: 4;
-    }  */
-    /* .exercise, .social, .selfcare */
     
     .regular-card{
         margin: 0 1rem 1rem 0;
@@ -293,6 +241,10 @@ body{
     .lastweek-span{
         grid-column-start: 1;
         font-size: 13px;
+    }
+
+    .footer{
+        grid-column-start: 2;
     }
 
 } 
